examples/test/testpolicy9550.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9550
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key21: value34
      key14: value18
      key9: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value16
      podSelector:
        matchLabels:
          key11: value40
